[package]
name = "gensokyo-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
stream-download = { version = "0.7.2", features = ["reqwest-native-tls"] }
icy-metadata = "0.1.2"
rodio = "0.19.0"
tui = "0.19"
crossterm = "0.25"
anyhow = "1.0.86"
