[package]
name = "genso-radio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
stream-download = { version = "0.7.2", features = ["reqwest-native-tls"] }
icy-metadata = "0.1.2"
rodio = "0.19.0"
crossterm = "0.25"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
